yaml-template/ssl-passthrough/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: echo-sslpass
spec:
  # tls:
    #- hosts:
    #- wecgwm.com
      #  secretName: tls-secret
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /echo-sslpass
        backend:
          service:
            name: echo-sslpass
            port:
              number: 443
